[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "protein_mpnn_pip"
version = "0.0.1"
authors = [
  { name="Theodore Sternlieb", email="tsternlieb@wesleyan.edu" },
]
description = "pip installable proteinmpnn "
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tsteternlieb/ProteinMPNN"
"Bug Tracker" = "https://github.com/tsteternlieb/ProteinMPNN/issues"